# extended_knapsack

./: LICENSE  Makefile  README.md  requirements.txt  setup.cfg
.github/workflows/: ci.yml
src/: knapsack.py
src/extended_knapsack/: __init__.py  knapsack.py
tests/: test_knapsack.py
