[metadata]
name = extended_knapsack
version = 0.0.1
author = Lion Ralfs
author_email = lion.ralfs@gmail.com
description = 0-1 knapsack with an additional constraint of maximum number of items used.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/lionralfs/extended_knapsack
project_urls =
    Bug Tracker = https://github.com/lionralfs/extended_knapsack/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: BSD License
    Operating System :: OS Independent
    Development Status :: 3 - Alpha

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6

[options.packages.find]
where = src